# django-allauth-2fa

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  manage.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
allauth_2fa/: __init__.py  adapter.py  app_settings.py  forms.py  middleware.py  mixins.py  ruff.toml  settings.py  urls.py  utils.py  views.py
allauth_2fa/management/commands/: allauth_2fa_migrate.py
allauth_2fa/templates/allauth_2fa/: authenticate.html  backup_tokens.html  remove.html  setup.html
docs/: Makefile  advanced.rst  conf.py  configuration.rst  index.rst  installation.rst  make.bat  settings.rst
testproject/templates/: profile.html
testproject/testproject/: settings.py  urls.py  wsgi.py
tests/: adapter.py  forms.py  run_settings.py  settings.py  test_allauth_2fa.py  urls.py
