[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py37"
exclude = [
    ".git",
    ".tox",
    "__pycache__",
]
select = [
    "B",
    "COM",
    "E",
    "F",
    "I",
    "S",
    "UP",
    "W",
]

[tool.ruff.isort]
force-single-line = true

[tool.ruff.per-file-ignores]
"tests/**" = ["S101", "S105"]
