[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-allauth-2fa"
dynamic = ["version"]
description = "Adds two factor authentication to django-allauth"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "Víðir Valberg Guðmundsson", email = "valberg@orn.li" },
]

keywords = [
    "2fa",
    "allauth",
    "auth",
    "authentication",
    "django",
    "factor",
    "otp",
    "two",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "django-allauth>=0.41.0",
    "django-otp>=1.0.0",
    "django>=3.2",
    "qrcode>=5.3",
]

[project.urls]
Homepage = "https://github.com/valohai/django-allauth-2fa"

[tool.hatch.version]
path = "allauth_2fa/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/allauth_2fa",
]

[tool.ruff]
target-version = "py37"
exclude = [
    ".git",
    ".tox",
    "__pycache__",
]
select = [
    "B",
    "COM",
    "E",
    "F",
    "I",
    "S",
    "UP",
    "W",
]

[tool.ruff.isort]
force-single-line = true

[tool.ruff.per-file-ignores]
"tests/**" = ["S101", "S105"]
