[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-allauth-2fa"
dynamic = ["version"]
description = "Adds two factor authentication to django-allauth"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Víðir Valberg Guðmundsson", email = "valberg@orn.li" },
]

keywords = [
    "2fa",
    "allauth",
    "auth",
    "authentication",
    "django",
    "factor",
    "otp",
    "two",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Pinned to due to backward-incompatible template changes in 0.58.0.
    "django-allauth>=0.53.0,<0.58.0",
    "django-otp>=1.2.0",
    "django>=4.1",
    "qrcode>=5.3",
]

[project.urls]
Homepage = "https://github.com/valohai/django-allauth-2fa"

[project.optional-dependencies]
test = [
    "pytest-cov==4.1.0",
    "pytest-django==4.5.2",
]
docs = [
    "Sphinx==1.6.5",
    "sphinx-autobuild==0.7.1",   # To auto-build docs as they're edited.
    "sphinx-rtd-theme==0.2.4",   # The Read the Docs theme for Sphinx.
]

[tool.hatch.envs.default]
features = ["test"]

[tool.hatch.version]
path = "allauth_2fa/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/allauth_2fa/**/*.py",
    "/allauth_2fa/**/*.html",
    "/allauth_2fa/py.typed",
]

[tool.hatch.build.targets.wheel]
include = [
    "/allauth_2fa/**/*.py",
    "/allauth_2fa/**/*.html",
    "/allauth_2fa/py.typed",
]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
exclude = [
    ".git",
    ".tox",
    "__pycache__",
]
select = [
    "B",
    "COM",
    "E",
    "F",
    "I",
    "S",
    "UP",
    "W",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105"]
