[metadata]
author = Víðir Valberg Guðmundsson
author_email = valberg@orn.li
description = Adds two factor authentication to django-allauth
keywords = otp, auth, two factor authentication, allauth, django, 2fa
license = Apache 2.0
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
name = django-allauth-2fa
url = https://github.com/valohai/django-allauth-2fa
version = attr: allauth_2fa.__version__
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.6
install_requires =
    django>=2.2
    qrcode>=5.3
    django-allauth>=0.41.0
    django-otp>=0.5.0
include_package_data = true

[options.packages.find]
where = .
exclude = tests

[flake8]
exclude =
    .git
    .tox
    __pycache__
    # The * import causes lots of false positives.
    tests/run_settings.py

# https://github.com/psf/black/blob/main/docs/guides/using_black_with_other_tools.md#flake8:w
max-line-length = 88
extend-ignore = E203
application-import-names = allauth_2fa, manage, tests
import-order-style = appnexus
